// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header component > renders with custom background color 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular header-top css-18g0gg-MuiToolbar-root"
  >
    <div
      class="MuiContainer-root MuiContainer-disableGutters css-1aa3h9d-MuiContainer-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-12ng94v-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-1e5alfj-MuiGrid2-root"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1ruuf8c-MuiTypography-root-MuiLink-root"
            href="https://www.skde.no/"
          >
            <img
              alt="SKDE logo"
              class="css-tkwvp9"
              src="/img/logos/logo-skde.svg"
            />
          </a>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-5glywb-MuiGrid2-root"
        >
          <nav
            aria-label="breadcrumb"
            class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-8yvas4-MuiTypography-root-MuiBreadcrumbs-root"
          >
            <ol
              class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
            >
              <li
                class="MuiBreadcrumbs-li"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1f6v1q3-MuiTypography-root"
                >
                  Home
                </p>
              </li>
            </ol>
          </nav>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular header-middle css-17kn1rw-MuiToolbar-root"
  >
    <div
      class="MuiContainer-root MuiContainer-disableGutters css-1aa3h9d-MuiContainer-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-bnaei2-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-5glywb-MuiGrid2-root"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 css-js3oe9-MuiTypography-root"
          >
            Default Title
          </h1>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-5glywb-MuiGrid2-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-8zgow4-MuiTypography-root"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Header component > renders with custom breadcrumbs 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular header-top css-18g0gg-MuiToolbar-root"
  >
    <div
      class="MuiContainer-root MuiContainer-disableGutters css-1aa3h9d-MuiContainer-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-12ng94v-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-1e5alfj-MuiGrid2-root"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1ruuf8c-MuiTypography-root-MuiLink-root"
            href="https://www.skde.no/"
          >
            <img
              alt="SKDE logo"
              class="css-tkwvp9"
              src="/img/logos/logo-skde.svg"
            />
          </a>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-5glywb-MuiGrid2-root"
        >
          <nav
            aria-label="breadcrumb"
            class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-8yvas4-MuiTypography-root-MuiBreadcrumbs-root"
          >
            <ol
              class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
            >
              <li
                class="MuiBreadcrumbs-li"
              >
                <a
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-fwszl2-MuiTypography-root-MuiLink-root"
                  href="/"
                >
                  Home
                </a>
              </li>
              <li
                aria-hidden="true"
                class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mnw9h2-MuiSvgIcon-root"
                  data-testid="NavigateNextRoundedIcon"
                  focusable="false"
                  font-weight="bold"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M9.31 6.71c-.39.39-.39 1.02 0 1.41L13.19 12l-3.88 3.88c-.39.39-.39 1.02 0 1.41s1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41L10.72 6.7c-.38-.38-1.02-.38-1.41.01"
                  />
                </svg>
              </li>
              <li
                class="MuiBreadcrumbs-li"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1f6v1q3-MuiTypography-root"
                >
                  About
                </p>
              </li>
            </ol>
          </nav>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular header-middle css-xev441-MuiToolbar-root"
  >
    <div
      class="MuiContainer-root MuiContainer-disableGutters css-1aa3h9d-MuiContainer-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-bnaei2-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-5glywb-MuiGrid2-root"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 css-js3oe9-MuiTypography-root"
          >
            Default Title
          </h1>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-5glywb-MuiGrid2-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-8zgow4-MuiTypography-root"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Header component > renders with custom children content 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular header-top css-18g0gg-MuiToolbar-root"
  >
    <div
      class="MuiContainer-root MuiContainer-disableGutters css-1aa3h9d-MuiContainer-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-12ng94v-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-1e5alfj-MuiGrid2-root"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1ruuf8c-MuiTypography-root-MuiLink-root"
            href="https://www.skde.no/"
          >
            <img
              alt="SKDE logo"
              class="css-tkwvp9"
              src="/img/logos/logo-skde.svg"
            />
          </a>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-5glywb-MuiGrid2-root"
        >
          <nav
            aria-label="breadcrumb"
            class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-8yvas4-MuiTypography-root-MuiBreadcrumbs-root"
          >
            <ol
              class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
            >
              <li
                class="MuiBreadcrumbs-li"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1f6v1q3-MuiTypography-root"
                >
                  Home
                </p>
              </li>
            </ol>
          </nav>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular header-middle css-xev441-MuiToolbar-root"
  >
    <div
      class="MuiContainer-root MuiContainer-disableGutters css-1aa3h9d-MuiContainer-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-bnaei2-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-5glywb-MuiGrid2-root"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 css-js3oe9-MuiTypography-root"
          >
            Default Title
          </h1>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-5glywb-MuiGrid2-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-8zgow4-MuiTypography-root"
          >
            <div>
              Custom Children
            </div>
          </h6>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Header component > renders with custom maximum width 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular header-top css-18g0gg-MuiToolbar-root"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-ho17r4-MuiContainer-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-12ng94v-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-1e5alfj-MuiGrid2-root"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1ruuf8c-MuiTypography-root-MuiLink-root"
            href="https://www.skde.no/"
          >
            <img
              alt="SKDE logo"
              class="css-tkwvp9"
              src="/img/logos/logo-skde.svg"
            />
          </a>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-5glywb-MuiGrid2-root"
        >
          <nav
            aria-label="breadcrumb"
            class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-8yvas4-MuiTypography-root-MuiBreadcrumbs-root"
          >
            <ol
              class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
            >
              <li
                class="MuiBreadcrumbs-li"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1f6v1q3-MuiTypography-root"
                >
                  Home
                </p>
              </li>
            </ol>
          </nav>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular header-middle css-xev441-MuiToolbar-root"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-ho17r4-MuiContainer-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-bnaei2-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-5glywb-MuiGrid2-root"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 css-js3oe9-MuiTypography-root"
          >
            Default Title
          </h1>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-5glywb-MuiGrid2-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-8zgow4-MuiTypography-root"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Header component > renders with custom title 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular header-top css-18g0gg-MuiToolbar-root"
  >
    <div
      class="MuiContainer-root MuiContainer-disableGutters css-1aa3h9d-MuiContainer-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-12ng94v-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-1e5alfj-MuiGrid2-root"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1ruuf8c-MuiTypography-root-MuiLink-root"
            href="https://www.skde.no/"
          >
            <img
              alt="SKDE logo"
              class="css-tkwvp9"
              src="/img/logos/logo-skde.svg"
            />
          </a>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-5glywb-MuiGrid2-root"
        >
          <nav
            aria-label="breadcrumb"
            class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-8yvas4-MuiTypography-root-MuiBreadcrumbs-root"
          >
            <ol
              class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
            >
              <li
                class="MuiBreadcrumbs-li"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1f6v1q3-MuiTypography-root"
                >
                  Home
                </p>
              </li>
            </ol>
          </nav>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular header-middle css-xev441-MuiToolbar-root"
  >
    <div
      class="MuiContainer-root MuiContainer-disableGutters css-1aa3h9d-MuiContainer-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-bnaei2-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-5glywb-MuiGrid2-root"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 css-js3oe9-MuiTypography-root"
          >
            Custom Title
          </h1>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-5glywb-MuiGrid2-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-8zgow4-MuiTypography-root"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Header component > renders with default props 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular header-top css-18g0gg-MuiToolbar-root"
  >
    <div
      class="MuiContainer-root MuiContainer-disableGutters css-1aa3h9d-MuiContainer-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-12ng94v-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-1e5alfj-MuiGrid2-root"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1ruuf8c-MuiTypography-root-MuiLink-root"
            href="https://www.skde.no/"
          >
            <img
              alt="SKDE logo"
              class="css-tkwvp9"
              src="/img/logos/logo-skde.svg"
            />
          </a>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-5glywb-MuiGrid2-root"
        >
          <nav
            aria-label="breadcrumb"
            class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-8yvas4-MuiTypography-root-MuiBreadcrumbs-root"
          >
            <ol
              class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
            >
              <li
                class="MuiBreadcrumbs-li"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1f6v1q3-MuiTypography-root"
                >
                  Home
                </p>
              </li>
            </ol>
          </nav>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular header-middle css-xev441-MuiToolbar-root"
  >
    <div
      class="MuiContainer-root MuiContainer-disableGutters css-1aa3h9d-MuiContainer-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-bnaei2-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-5glywb-MuiGrid2-root"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 css-js3oe9-MuiTypography-root"
          >
            Default Title
          </h1>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-5glywb-MuiGrid2-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-8zgow4-MuiTypography-root"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
